2010-10-24  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl (%index_names): remove the 'prefixes' key, 
	it isn't useful.

2010-10-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Custom Interface for Simple HTML Customization):
	rename+edit.

2010-10-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Hash Interface for HTML Customization): rename+edit.

2010-10-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Customizing HTML for Simple Commands): rename+edit.
	(Customizing HTML After @@-Colon): Try using @-command in node name.

2010-10-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* util/texi2dvi (run_index): Separate `local' statement from
	variable initialization, so dash v0.5.5.1 won't word-split the
	right hand side.

2010-10-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Customizing HTML After At-Colon): rename+edit.

2010-10-11  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Customizing HTML Basic Commands),
	(Customizing HTML Commands Without Arguments): rename+edit.

2010-10-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Customizing Output File Names): further
	attempts at clarifying the config vars for output file names.
	(Customizing HTML Headings): rename+edit.

2010-10-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Defining Macros),
	(alias),
	(set value): more precisely document naming recommendations
	and requirements.

2010-10-07  Sergey Poznyakoff  <gray@mirddin.farlep.net>

	* info/nodes.c (info_node_of_file_buffer_tags): Check if
	tag->nodestart is valid.  Suggested by Hilmar Preusse
	<hille42@web.de>.

2010-10-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Customizing Output Target Names): rename+edit.

2010-09-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: Avoid more duplicated index entries.
	(PDF Output): correct link for GNU GV.

2010-09-25  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl (enter_index_entry),
	texi2html/texinfo.init (index_entry), formats/info.init (index_entry):